Add stability enhancements: user warnings and kernel panic recovery guide

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
 
                 <!-- Main Menu -->
                 <div id="menu" class="menu-container">
+                    <!-- Warning Section -->
+                    <div class="warning-section">
+                        <h3 class="warning-title">⚠️ Penting Sebelum Mulai</h3>
+                        <ul class="warning-list">
+                            <li>Tutup <strong>semua tab</strong> browser PS4</li>
+                            <li>Clear cache: Settings → Application Saved Data → Internet Browser</li>
+                            <li><strong>Jangan spam tombol</strong> saat loading!</li>
+                            <li>Tunggu <strong>10-30 detik</strong> per percobaan</li>
+                            <li>Normal jika butuh <strong>2-3x percobaan</strong></li>
+                        </ul>
+                    </div>
+
                     <div class="buttons-grid">
                         <a href="900goldhen_psfree/index.html" class="exploit-btn primary">
                             <span class="btn-icon">Unlock</span>
@@ -53,6 +65,21 @@
                             <p class="social-item">Instagram: @weiszgspace</p>
                             <p class="social-item">TikTok: @weiszgspace</p>
                         </div>
+                    </div>
+
+                    <!-- Kernel Panic Recovery -->
+                    <div class="recovery-section">
+                        <h3 class="recovery-title">💡 Jika Kena Kernel Panic (Blue Screen)</h3>
+                        <ol class="recovery-list">
+                            <li>Matikan PS4 - Tahan tombol power 7 detik</li>
+                            <li>Boot Safe Mode - Tahan power sampai 2x beep</li>
+                            <li>Pilih "Rebuild Database" (Option 5)</li>
+                            <li>Restart PS4 normal</li>
+                            <li>Clear browser cache lagi</li>
+                            <li>Coba exploit kembali</li>
+                        </ol>
+                        <p class="recovery-note">Kernel panic adalah hal normal. Exploit sukses rata-rata di percobaan
+                            ke-2 atau ke-3.</p>
                     </div>
 
                     <!-- Credits -->
