Enhanced button design with gradient, glow effects, and animations

--- a/restore/900goldhen_psfree/index.html
+++ b/restore/900goldhen_psfree/index.html
@@ -98,7 +98,7 @@
             <p>Terima kasih: <a href="https://twitter.com/sleirsgoevy">@sleirsgoevy</a> • ChendoChap • <a
                     href="https://twitter.com/Znullptr">@Znullptr</a> • SiSTR0 • <a
                     href="https://x.com/Kameleonre_">@Kameleonre_</a> • Abc • <a href="https://twitter.com/GamerHack93"
-                    target="_blank">@GamerHack93</a> • GamerHack •
+                    target="_blank">@GamerHack93</a>
         </div>
     </div>
 
