fix button lag dan loading bar palsu

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                     <!-- Kernel Panic Recovery -->
                     <div class="recovery-section">
-                        <h3 class="recovery-title">💡 Jika Kena Kernel Panic (Blue Screen)</h3>
+                        <h3 class="recovery-title">💡 Jika sering terkena Kernel Panic (Hang)</h3>
                         <ol class="recovery-list">
                             <li>Matikan PS4 - Tahan tombol power 7 detik</li>
                             <li>Boot Safe Mode - Tahan power sampai 2x beep</li>
