--- a/restore/900goldhen_psfree/index.html
+++ b/restore/900goldhen_psfree/index.html
@@ -42,22 +42,9 @@
         .loading-progress {
             height: 100%;
             background: #58A6FF;
-            width: 0%;
-            animation: loading 2s ease-in-out infinite;
-        }
-
-        @keyframes loading {
-            0% {
-                width: 0%;
-            }
-
-            50% {
-                width: 70%;
-            }
-
-            100% {
-                width: 100%;
-            }
+            width: 10%;
+            border-radius: 2px;
+            transition: width 0.3s ease;
         }
 
         .credits {
